Add endpoints for extracting text from SIARD lobs.